<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mileage Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="stautslabel">Status:</string>
    <string name="start_location_label">From:</string>
    <string name="end_location_label">To:</string>
    <string name="location_unknow">Unknown</string>
    <string name="trip_date">Date:</string>
    <string name="mileage_label">Mileage:</string>
    <string name="trip_category">Category:</string>
    <string name="toll">Tolls:</string>
    <string name="parking">Parking:</string>
    <string name="cost">Cost:</string>
    <string name="edit_btn">Edit</string>
    <string name="save_concur">Save To Concur</string>
    <string name="concur_select_report">Select Report:</string>

</resources>
