<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/start_location_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start_location_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_unknow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/end_location_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/end_location_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/location_unknow" />

    </LinearLayout>

</LinearLayout>
